<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.about.AboutFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="196dp"
        android:layout_height="118dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_animapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/about_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="180dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/ll_dev"
        android:orientation="vertical"
        android:showDividers="middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:textAlignment="center"
            android:id="@+id/tv_madeBy"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/made_by" />

        <TextView
            android:id="@+id/tv_bisma"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bisma" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/tv_gilang"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gilang" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/tv_sofyan"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sofyan" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>